# systemd-kde-agent

./: .gitignore  CMakeLists.txt  README.md
agent/: AuthDialog.cpp  AuthDialog.h  AuthDialog.ui  CMakeLists.txt  SystemdKDEAgent.cpp  SystemdKDEAgent.h  main.cpp  systemd-kde-agent.desktop.in  systemdkde.cpp  systemdkde.h
